Tillater refusjon ut over ansettelsesperiode og i perioder med over 14 dager permisjon som overlapper stp (#4538)